# KarmaCore

./: README.md  config_example.toml  pyproject.toml
karmacore/config/: ext_configuration.py  superusers_configuration.py
karmacore/extensions_base/: extension_base.py  karma_formula.py
karmacore_ext/example_ext/: __init__.py  triggers_negative.csv  triggers_positive.csv
